# ijkplayer

./: README.md  init-android-libsoxr.sh  init-config.sh  init-ios.sh
android/: readme.txt
android/contrib/: compile-openssl.sh
android/contrib/tools/: do-compile-ffmpeg.sh  do-detect-env.sh
android/demo/: local.properties
android/demo/app/: CMakeLists.txt  build.gradle
android/ijkplayer/: build.gradle
android/videoplayer/app/: CMakeLists.txt  build.gradle
android/videoplayer/app/libs/include/libffmpeg/: config.h
android/videoplayer/app/src/main/: AndroidManifest.xml
android/videoplayer/app/src/main/java/com/vasd/pvideoplayer/: MediaTexture.java  MediaTextureManager.java  Square.java
android/videoplayer/app/src/main/jni/: AndroidMain.cpp  VulkanMain.cpp  VulkanMain.hpp  h5_player.h
android/videoplayer/app/src/main/shaders/: tri.vert
android/videoplayer_gles/: VideoDemo.jks  build.gradle
android/videoplayer_gles/app/: CMakeLists.txt  build.gradle
config/: module-lite-hevc.sh  module-lite.sh  module-mini.sh
harmony/: compile-ffmpeg.sh  compile-ogg-vorbis.sh  compile-openssl.sh
harmony/tools/: do-compile-ffmpeg.sh
ijkmedia/ijkplayer/: Android.mk  config.h  ff_cmdutils.c  ff_cmdutils.h  ff_fferror.h  ff_ffinc.h  ff_ffmsg.h  ff_ffmsg_queue.h  ff_ffpipeline.c  ff_ffpipeline.h  ff_ffpipenode.c  ff_ffpipenode.h  ff_ffplay.c  ff_ffplay.h  ff_ffplay_def.h  ff_ffplay_options.h  ff_redefine.h  h5_player.c  h5_player.h  ijkmeta.c  ijkmeta.h  ijkplayer.c  ijkplayer.h  ijkplayer_delegate_def.c  ijkplayer_delegate_def.h  ijkplayer_internal.h  ijkversion.h
ijkmedia/ijkplayer/android/: ffmpeg_api_jni.c  ijkplayer_android.c  ijkplayer_jni.c
ijkmedia/ijkplayer/ijkavformat/: allformats.c  ijkasync.c  ijkcacheutil.c  ijkcacheutil.h  ijkio.c  ijkioandroidio.c  ijkioapplication.h  ijkiocache.c  ijkioffio.c  ijkiomanager.c  ijkiourl.h  ijkiourlhook.c  ijklivehook.c  ijklongurl.c  ijkmediadatasource.c  ijksegment.c  ijkurlhook.c
ijkmedia/ijkplayer/ijkavutil/: ijkdict.c  ijkfifo.c  ijkstl.c  ijkstl.h  ijkthreadpool.c  ijkutils.c
ijkmedia/ijkplayer/ios/: ijkplayer_ios.h  ijkplayer_ios.m
ijkmedia/ijkplayer/mac/: ijkplayer_mac.c  ijkplayer_mac.h
ijkmedia/ijkplayer/pipeline/: ffpipenode_ffplay_adec.c  ffpipenode_ffplay_adec.h  ffpipenode_ffplay_vdec.c
ijkmedia/ijkplayer/windows/: ijkplayer_windows.c  ijkplayer_windows.h
ijkmedia/ijksdl/: Android.mk  ijksdl_aout.c  ijksdl_aout.h  ijksdl_fourcc.h  ijksdl_inc_internal.h  ijksdl_log.c  ijksdl_log.h  ijksdl_mutex.c  ijksdl_thread.c  ijksdl_timer.c  ijksdl_timer.h  ijksdl_vout.c  ijksdl_vout.h  ijksdl_windows_interface.c  ijksdl_windows_interface.h  ijksdl_windows_log.c  ijksdl_windows_log.h  ijksdl_windows_zlog.conf
ijkmedia/ijksdl/android/: android_audiotrack.c  ijksdl_android.h  ijksdl_android_jni.c  ijksdl_android_jni.h  ijksdl_aout_android_audiotrack.c  ijksdl_aout_android_opensles.c  ijksdl_codec_android_mediadef.h  ijksdl_codec_android_mediaformat.h  ijksdl_vout_android_nativewindow.c  ijksdl_vout_android_null.c  ijksdl_vout_android_null.h  ijksdl_vout_overlay_android_mediacodec.c  ijksdl_vout_overlay_android_mediacodec.h
ijkmedia/ijksdl/dummy/: ijksdl_vout_dummy.c
ijkmedia/ijksdl/ffmpeg/: ijksdl_inc_ffmpeg.h  ijksdl_vout_overlay_ffmpeg.c
ijkmedia/ijksdl/ios/: IJKSDLAudioQueueController.m  ijksdl_aout_ios_audiounit.h  ijksdl_aout_ios_audiounit.m  ijksdl_ios.h  ijksdl_vout_ios_null.c  ijksdl_vout_ios_null.h  ijksdl_vout_overlay_videotoolbox.h  ijksdl_vout_overlay_videotoolbox.m
ijkmedia/ijksdl/mac/: ijksdl_aout_mac_audiounit.h  ijksdl_aout_mac_audiounit.m  ijksdl_vout_mac_null.c  ijksdl_vout_mac_null.h
ijkmedia/ijksdl/windows/: ijksdl_aout_windows_directsound.c  ijksdl_aout_windows_directsound.h  ijksdl_aout_windows_xaudio2.c  ijksdl_aout_windows_xaudio2.h  ijksdl_vout_windows_null.c  ijksdl_vout_windows_null.h
ijkmedia/libyuv/include/: libyuv.h
ijkmedia/libyuv/source/: planar_functions.cc
ios/: compile-ffmpeg.sh  compile-openssl.sh  readme.txt
ios/MachoRenamer/: MachoRenamer
ios/PixFFmpeg/PixFFmpeg/: PixFFmpegNew.c  PixFFmpegNew.h
ios/PixFFmpeg/PixFFmpeg.xcodeproj/: project.pbxproj
ios/PixVideo_framework/PixVideo_framework/: PixFFmpeg-prefix.pch  PixVideo_framework.h  PrivacyInfo.xcprivacy
ios/PixVideo_framework/PixVideo_framework.xcodeproj/: project.pbxproj
ios/demo/demo/: AppDelegate.h  AppDelegate.m  GameViewController.h  GameViewController.m  Renderer.h  Renderer.m  ShaderTypes.h  Shaders.metal  h5_player.h  main.m
ios/demo/demo.xcodeproj/: project.pbxproj
ios/iosvideo.xcworkspace/: contents.xcworkspacedata
ios/tools/: do-compile-ffmpeg.sh
ios/videoplayer/videoplayer.xcodeproj/: project.pbxproj
libbuild/: CMakeLists.txt  compile-android.bat  compile-android.sh  compile-harmony.bat  compile-harmony.sh  compile-ios.sh  compile-mac.sh  compile-win.bat  llvm_flag.txt
mac/: compile-ffmpeg.sh  readme.txt
mac/PixVideo/PixVideo.xcodeproj/: project.pbxproj
mac/demo/demo/: AppDelegate.h  AppDelegate.m  GameViewController.h  GameViewController.m  Info.plist  Renderer.h  Renderer.m  ShaderTypes.h  Shaders.metal  main.m
mac/demo/demo.xcodeproj/: project.pbxproj
mac/ffmpeg-x86_64/: configure  ffmpeg编译配置.txt
mac/ffmpeg-x86_64/doc/: config.texi
mac/ffmpeg-x86_64/ffbuild/: config.fate  config.mak  config.sh
mac/ffmpeg-x86_64/libavcodec/: bsf_list.c  libavcodec.pc  (+1 more)
mac/macvideo.xcworkspace/: contents.xcworkspacedata
mac/tools/: do-compile-ffmpeg.sh
windows/: build-ffmpeg.bat  callbat.js  readme.txt  zip-ffmpeg-dll.bat
windows/FFmpeg-ijkplayer/: .gitignore  configure  ffmpeg编译配置.txt
windows/PixVideo/: PixVideo.def  PixVideo.props  PixVideo.sln  PixVideo.vcxproj  PixVideo.vcxproj.filters
windows/PixVideoCore/: PixVideoCore.def  PixVideoCore.sln  PixVideoCore.vcxproj  PixVideoCore.vcxproj.filters
windows/demo/: demo.cpp  demo.rc  demo.sln  demo.vcxproj  h5_player.h
windows/libogg/: ogg.pc
windows/libvorbis/: vorbis.pc
windows/openssl/: openssl.pc
windows/videoplayer/: videoplayer.def  videoplayer.sln  videoplayer.vcxproj  videoplayer.vcxproj.filters
(+147 files in other folders)
